# sql-ai

./: .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
src/sql_ai/athena/: README.md  athena_llm.py  datatypes_list.py  functions_list.py  sql_formatting.py  sql_prompting.py  table.py  utils.py
src/sql_ai/athena/clean_sql/: cleaning_sql.py  sql_fixing.py  sql_standardising.py
src/sql_ai/athena/tracking/: decorator.py
src/sql_ai/bedrock/: utils.py
src/sql_ai/streamlit/: README.md  app.py  cem_timetable.py  config_dataclass.py  css_utils.py  pixar_films.py  utils.py
src/sql_ai/tracking/: decorator.py  step.py  tracker.py
src/sql_ai/utils/: s3_utils.py  utils.py
tests/: conftest.py  utils.py
tests/athena/: test_athena.py
tests/bedrock/: test_structured_data.py  test_structured_data_sql.py
tests/llm/: test_athena_llm.py
